plugins {
    id 'java'
    alias(libs.plugins.springframework.boot)
    alias(libs.plugins.dependency.management)
    alias(libs.plugins.openrewrite)
}

group = 'cn.gekal.spring'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

rewrite {
    activeRecipe("org.openrewrite.java.spring.boot4.UpgradeSpringBoot_4_0")
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-webmvc'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-security-oauth2-resource-server'

    implementation libs.mybatis.spring.boot.starter

    compileOnly libs.springdoc.openapi.starter.webmvc.ui
    developmentOnly libs.springdoc.openapi.starter.webmvc.ui

    runtimeOnly 'org.postgresql:postgresql'

    rewrite libs.rewrite.spring

    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation libs.mybatis.spring.boot.starter.test
}

tasks.named('test') {
    useJUnitPlatform()
}
